--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "istanbul": "^0.3.17",
     "jsdom": "^3.1.2",
     "mocha": "^2.2.5",
-    "react": "0.13.1",
+    "react": ">=0.13.3",
     "react-gravatar": "2.0.0",
     "react-component-gulp-tasks": "^0.7.0",
     "sinon": "^1.15.4",
